--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body {
     background-color: black;
     color: chartreuse;
 }
-canvas {
+.welcomeCanvas {
     border: 5px outset chartreuse;
     background-color: darkgreen;
 }
