--- a/index.css
+++ b/index.css
@@ -1,9 +1,11 @@
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    background-color: black;
+    background-image: url('data/bgs/bark0.jpg');
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
     color: chartreuse;
 }
-canvas {
+.welcomeCanvas {
     border: 5px outset chartreuse;
     background-color: darkgreen;
 }
@@ -11,7 +13,12 @@ canvas {
     border: 5px outset red;
     background-color: rgb(2, 45, 59);
     text-align: center;
-    display: table;
+    display: table;  
+}
+.h1bar {
+    border: 5px outset darkgreen;
+    background-color: black;
+    text-align: center;   
 }
 div {
     border: 5px outset chartreuse;
