--- a/index.css
+++ b/index.css
@@ -24,11 +24,12 @@ body {
     padding: 10px;
     margin: 50px;
     background-color: lightcyan;
-    color: black
+    color: black;
+    align-items: center;
 }
 .logo{
-    background-image: url('data/Lumberdome.png');
-    background-size: 100%;
+    background-image: url('data/LumberdomeLogo.png');
+    background-size: 110%;
     width: 300px;
     height: 100px;
 }
