--- a/index.css
+++ b/index.css
@@ -1,6 +1,5 @@
 body {
     font-family: 'Arial';
-    background: rgb(2,0,36);
     border: black;
     padding: 10px;
     margin: 10px;
@@ -10,10 +9,10 @@ body {
 }
 
 .pageTop{
-    border: lightcyan;
+    border: white;
     padding: 10px;
     margin: 10px;
-    background-color: lightcyan;
+    background-color: white;
     color: black;
     text-align: center;
     
@@ -23,7 +22,7 @@ body {
     border: lightcyan;
     padding: 10px;
     margin: 50px;
-    background-color: lightcyan;
+    background-color: white;
     color: black;
     align-items: center;
 }
@@ -32,6 +31,12 @@ body {
     background-size: 110%;
     width: 300px;
     height: 100px;
+    align-self: center;
+}
+.class{
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 .navbar {
     text-align: center;
@@ -50,10 +55,17 @@ div {
     text-align: center;
 }
 
-.welcomeCanvas {
+.Lumberdome {
     border: 5px 'black';
     padding: 10px;
     background-color: darkgreen;
+}
+.startButton {
+    border: 5px 'black';
+    background-color: white;
+    color: black;
+    width: 120;
+    height: 40;
 }
 
 footer {
