--- a/index.css
+++ b/index.css
@@ -1,19 +1,15 @@
 body {
     font-family: 'Arial';
-    background: rgb(2,0,36);
-    border: black;
-    padding: 10px;
-    margin: 10px;
     background: linear-gradient(135deg, blue 0%, blue 75%, brown 100%);
     background-size: 100% 100%;
     color: grey;
 }
 
 .pageTop{
-    border: lightcyan;
+    border: white;
     padding: 10px;
     margin: 10px;
-    background-color: lightcyan;
+    background-color: white;
     color: black;
     text-align: center;
     
@@ -23,7 +19,7 @@ body {
     border: lightcyan;
     padding: 10px;
     margin: 50px;
-    background-color: lightcyan;
+    background-color: white;
     color: black;
     align-items: center;
 }
@@ -32,7 +28,9 @@ body {
     background-size: 110%;
     width: 300px;
     height: 100px;
+    align-self: center;
 }
+
 .navbar {
     text-align: center;
     display: table-row;
@@ -43,17 +41,16 @@ body {
     background-color: inherit;
     text-align: center;   
 }
-div {
-    padding: inherit;
-    border: inherit;
-    background-color: inherit;
-    text-align: center;
-}
 
-.welcomeCanvas {
-    border: 5px 'black';
-    padding: 10px;
-    background-color: darkgreen;
+.Lumberdome {
+    background-color: rgb(0, 50, 0);
+}
+.startButton {
+    border: 5px black;
+    background-color: white;
+    color: black;
+    width: 120;
+    height: 40;
 }
 
 footer {
